@@ -1,3 +1,10 @@
+2011-05-25  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/gtk/widgets/image.jl: added image-widget for
+	sawfish-config (contains preview and selector), original widget by
+	Lucas Pandolfo and heavily modified by me
+
+	* lisp/sawfish/gtk/Makefile.in: updated
+
 2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits
 
